# zoom-auto

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.toml
docker/: Dockerfile  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: MeetingDashboard.tsx  PersonaConfig.tsx  Settings.tsx  VoiceSetup.tsx
scripts/: demo_pipeline.py  docker-run.sh  import_voice_samples.py  record_voice_samples.py  test_tts.py
src/zoom_auto/: __init__.py  __main__.py  config.py  main.py
src/zoom_auto/context/: __init__.py  manager.py  meeting_state.py  speaker_tracker.py  transcript.py
src/zoom_auto/llm/: __init__.py  base.py  claude.py  ollama.py
src/zoom_auto/persona/: __init__.py  builder.py  knowledge_store.py  learner.py  style_analyzer.py
src/zoom_auto/pipeline/: __init__.py  audio_pipeline.py  conversation.py  vad.py
src/zoom_auto/response/: __init__.py  decision.py  generator.py  turn_manager.py
src/zoom_auto/stt/: __init__.py  base.py  faster_whisper.py
src/zoom_auto/tts/: __init__.py  audio_validation.py  base.py  chatterbox.py  prompts.py  voice_store.py
src/zoom_auto/web/: __init__.py  app.py
src/zoom_auto/zoom/: __init__.py  audio_capture.py  (+5 more)
tests/: conftest.py  test_chat.py  test_context.py  test_learner.py  test_persona.py  test_pipeline.py  test_project_indexer.py  test_response.py  test_stt.py  test_tts.py  test_url_parser.py  test_vad.py  test_voice_store.py  test_web.py  test_zoom.py
(+11 files in other folders)
