[project]
name = "zoom-auto"
version = "0.1.0"
description = "AI-powered autonomous Zoom meeting participant with voice cloning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Samuel French" }]

dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "tomli>=2.0.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "numpy>=1.26.0",
    "faster-whisper>=1.1.0",
    "chatterbox-tts>=0.1.0",
    "silero-vad>=5.1",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "zoom-meeting-sdk>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zoom_auto"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "sounddevice.*",
    "soundfile.*",
    "librosa.*",
    "faster_whisper.*",
    "chatterbox.*",
    "silero_vad.*",
    "zoom_meeting_sdk.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
]
